syntax="proto3";
option csharp_namespace="Proto";

import "common.proto";

package standard;

message AuthenticationConnectRequest {
  string user_name=1;
}
message AuthenticationConnectReply {
  uint32 id=1;
  common.ResultReply result=2;
}

message AuthenticationMaintainConnectionRequest {
  uint32 id=1;
}
message AuthenticationMaintainConnectionReply {
  common.ResultReply result=1;
}

service Authentication {
  rpc connect(AuthenticationConnectRequest) returns(AuthenticationConnectReply);
  rpc maintainConnection(AuthenticationMaintainConnectionRequest) returns(AuthenticationMaintainConnectionReply);
}
