syntax="proto3";
option csharp_namespace="protos";

package common;

message ResultReply {
  bool result=1;
  string info=2;
}